# timeit

./: .hgignore  .travis.yml  CHANGELOG.md  LICENSE  cabal.haskell-ci  timeit.cabal
.github/workflows/: haskell-ci.yml
System/: GetRUsage.hsc  TimeIt.hs
