Name:               timeit
Version:            2.1

Homepage:           https://github.com/merijn/timeit
Bug-Reports:        https://github.com/merijn/timeit/issues

Author:             Lennart Augustsson
Maintainer:         Merijn Verstraaten <merijn@inconsistent.nl>, Lennart Augustsson
Copyright:          Copyright © 2009, Lennart Augustsson

License:            BSD3
License-File:       LICENSE

Category:           System
Cabal-Version:      >= 1.10
Build-Type:         Simple
Tested-With:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5,
                    GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.8,
                    GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1,
                    GHC == 9.12.1

Extra-Source-Files: CHANGELOG.md

Synopsis:           Time monadic computations with an IO base.

Description:
    A simple wrapper to show the used CPU time of monadic computation with an
    IO base.

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -fno-warn-unused-do-bind

  Exposed-Modules:      System.TimeIt
  Build-Depends:        base >= 3 && < 5

  Other-Modules:        System.GetRUsage

  if impl(ghc < 8.0)
    Build-Depends:      transformers >= 0.2 && < 0.7

Source-Repository head
  Type:     git
  Location: ssh://github.com:merijn/broadcast-chan.git
